Discount section is add in index.html file

--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
             <div class="discount__container container grid">
                 <div class="discount__data">
                     <h2 class="discount__title section__title">
-                        Up To 50% Discount
+                        Up to 50% Discount
                     </h2>
 
                     <p class="discount__description">
@@ -410,6 +410,7 @@
                         writers, the more you buy, the more
                         discounts we have for you.
                     </p>
+
                     <a href="#" class="button">Shop Now</a>
                 </div>
                 <div class="discount__images">
@@ -418,6 +419,7 @@
                 </div>
             </div>
         </section>
+        <!--Asmaa branch-->
 
         <!--==================== NEW BOOKS ====================-->
         <section class="new section" id="new" new>
