--- a/index.html
+++ b/index.html
@@ -832,6 +832,7 @@
 
         <!--==================== TESTIMONIAL ====================-->
 
+
         <section class="testimonial section" id="testimonial">
             <h2 class="section__title">Customer Opinions</h2>
             <div class="testimonial__container container">
@@ -902,6 +903,8 @@
             </div>
         </section>
     </main>
+
+
     <!--==================== FOOTER ====================-->
     <footer class="footer">
         <div class="footer__container container grid">
@@ -970,7 +973,7 @@
                 </div>
             </div>
         </div>
-    </footer> -->
+    </footer>
 
     <!--========== SCROLL UP ==========-->
     <a href="#" class="scrollup" id="scroll-up">
