--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
         <!--==================== FEATURED ====================-->
         <section class="featured section" id="featured">
             <h2 class="section__title">
-                featured Books
+                Featured Books
                 <i class="fa fa-shopping-cart" id="cart-button" style="font-size:24px ;margin-left :2px"></i>
             </h2>
 
